samples/_failures_safe/1761218269_78f5d6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fc62399e.c: In function ‘tokenize’:
./samples/SAFE/__tmp_fc62399e.c:170:9: error: expected declaration or statement at end of input
  170 |         }
      |         ^
./samples/SAFE/__tmp_fc62399e.c:170:9: error: expected declaration or statement at end of input
